 (Format: Year/Month/Day)
Changes for 1.1:
*07/06/03:
   * Submenus of slit menu were misbehaving with xinerama (Mark)
     Slit.cc
   * Also send transient windows when sending a window to another workspace, bug
     #1716900 (Mark)
     Screen.cc
   * Only change layer to normal when removing _NET_WM_STATE_{ABOVE,BELOW} if
     the window is actually above/below the normal layer (thanks Jim Ramsay)
     Ewmh.cc
*07/06/01:
   * Added key commands AddWorkspace and RemoveLastWorkspace (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/05/23:
   * Added key command :Attach <pattern> which groups all windows matching the
     given pattern (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/05/20:
   * Added resources session.screen<N>.maxDisable{Move,Resize}: <boolean>, which
     prevent maximized windows from being moved/resized (Mark)
     Window.cc Screen.cc/hh nls/fluxbox-nls.hh
   * Fixed bug #1717782, Bad fullscreen in ooimpress2  ( Henrik )
     mwm hint had no-resize which made resizing with 
     FluxboxWindow::setFullscreen impossible.
     Window.cc
*07/05/19:
   * Changed behavior of resource session.screen<N>.followModel (Mark)
     - now only options are Ignore and Follow, the latter using the setting in
       session.screen<N>.userFollowModel
     Window.cc/hh Ewmh.cc Screen.cc/hh
   * Fixed bug #1718112, memory leak in FbWindow::textProperty ( Henrik )
     FbTk/FbWindow.cc
*07/05/17:
   * Fixed some window placement issues (thanks Tomas Janousek)
     ScreenPlacement.cc
*07/05/16:
   * Added new resource session.screen<N>.noFocusWhileTypingDelay: <int> (Mark)
     - specifies a time in milliseconds that new windows should not gain focus
       while the user is typing in the focused window
     Window.cc/hh Screen.cc/hh
*07/05/13:
   * Added new placement policies {Row,Col}MinOverlapPlacement. They behave the
     same as {Row,Col}SmartPlacement when the window fits but fall back on